--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans"), local("OpenSans"), url("http://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Open Sans Italic"), local("OpenSans-Italic"), url("http://themes.googleusercontent.com/static/fonts/opensans/v8/xjAJXh38I15wypJXxuGMBobN6UDyHWBl620a-IRfuBk.woff") format("woff");
+}
+
 body, html
 {
     background-color: #4d4d4d;
@@ -14,7 +28,7 @@ nav
     height:100%;
     float: left;
     margin:0px;
-    padding:50px 80px 0px 10px;
+    padding:50px 90px 0px 10px;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -24,7 +38,7 @@ nav>ul, nav>h1
 {
     margin:0;
     list-style-type: none;
-    font-size:16px;
+    font-size:14px;
     padding-left:40px;
     font-weight:100;
     margin-bottom: 50px;
@@ -37,10 +51,23 @@ nav>ul>li
 
 article
 {
-    margin:50px 0px 0px 300px;
+    margin:40px 0px 0px 300px;
     padding-right: 30px;
     max-width: 700px;
     min-width: 300px;
+}
+
+article>time:first-child
+{
+    float:right;
+    margin-top:12px;
+    color:#C4C4C4;
+}
+
+article>h2
+{
+    font-size: 32px;
+    font-weight: 100
 }
 
 @media all and (min-height: 365px)
@@ -54,6 +81,12 @@ article
 
 nav>ul>li>a
 {
-    color:inherit;
+    
     text-decoration: inherit;
+}
+
+a
+{
+    color:inherit;
+    text-decoration: underline;
 }
