--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,30 +1,8 @@
 ---
 ---
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ page.title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
-</head>
-<body>
-<nav>
-<h1><a href="/">sam ross</a></h1>
-<ul>
-    <li><a href="http://www.chris-granger.com/2014/03/27/toward-a-better-programming/">inspiration</a></li>
-    <li>github</li>
-    <li>portfolio</li>
-    <li>about</li> 
-</ul>
-<ul>
-    <li>yes</li>
-    <li>no</li>
-    <li>maybe</li>
-</ul>
-</nav>
+{% include header.html %}
 
 {{ content }}
 
-</body>
-</html>
+{% include footer.html %}
