--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ blockquote
 {
     font-style: italic;
     border-left: 10px solid #444;
-    padding: 5px 10px;
-    margin: 20px 16px;
+    padding: 5px 15px 5px 10px;
+    margin: 20px 26px 20px 16px;
     border-radius: 8px;
     background-color: #555
 }
