--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
 <nav>
 <h1><a href="/">sam ross</a></h1>
 <ul>
-    <li><a href="http://www.chris-granger.com/2014/03/27/toward-a-better-programming/">inspiration</a></li>
     <li><a href="https://github.com/flannelJesus">github</a></li>
-    <li><a href="https://www.flickr.com/photos/sammyross/">flickr</a></li>
+    <li><a href="/cv">cv</a></li>
     <li><a href="/about">about</a></li> 
+    <li><a href="http://www.chris-granger.com/2014/03/27/toward-a-better-programming/">inspiration</a></li>
 </ul>
 <ul>
     <li>yes</li>
