--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <li><a href="https://github.com/flannelJesus">github</a></li>
     <li><a href="/cv">cv</a></li>
     <li><a href="/about">about</a></li> 
-    <li><a href="http://www.chris-granger.com/2014/03/27/toward-a-better-programming/">inspiration</a></li>
+    <li><a href="http://www.chris-granger.com">inspiration</a></li>
 </ul>
 <ul>
     <li>yes</li>
