--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@
 
 {{ content }}
 
-<p><em><a href="/">view more</a></em></p>
+<p class="view"><em><a href="/">view more</a></em></p>
 
 {% include footer.html %}
