--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
 <head>
     <title>{{ page.title }}</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 </head>
 <body>
 <nav>
