--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ ul.exp time { color:#C4C4C4; font-style: italic; margin-left: 20px}
     ul.exp time { float:right; margin-left: none}
 }
 
-@media only screen and (max-width : 1065px) {
+@media all and (max-width : 1065px) {
 
   object, video, div.video-wrapper, div.player { width:100%; max-width:100% !important; }
   body { padding-right: 30px}
