--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,12 @@ ul.post-list time { margin-right:10px; color:#C4C4C4; font-style: italic; }
 ul.exp {  list-style: none; max-width: 500px;}
 ul.exp time { color:#C4C4C4; font-style: italic; margin-left: 20px}
 
-@media all and (min-width : 747px){
+@media only screen and (min-width : 747px){
     article p { text-align: justify}
     ul.exp time { float:right; margin-left: none}
 }
 
-@media all and (max-width : 1065px) {
+@media only screen and (max-width : 1065px) {
 
   object, video, div.video-wrapper, div.player { width:100%; max-width:100% !important; }
   body { padding-right: 30px}
