Redesigned via purecss.io layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ page.title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-</head>
-<body>
-<nav>
-<h1><a href="/">sam ross</a></h1>
-<ul>
-    <li><a href="https://github.com/flannelJesus">github</a></li>
-    <li><a href="/cv">cv</a></li>
-    <li><a href="/about">about</a></li> 
-    <li><a href="http://www.chris-granger.com">inspiration</a></li>
-</ul>
-<ul>
-    <li>yes</li>
-    <li>no</li>
-    <li>maybe</li>
-</ul>
-</nav>
-
-<article>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Sam Ross Personal Website">
+        <title>flannelJesus.github.io</title>
+        
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
+            
+            <link rel="stylesheet" href="/css/pure.css">
+            <link rel="stylesheet" href="/css/main-grid.css">
+            <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+            <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+        </head>
+        <body>
+            <div class="pure-g">
+                <nav class="sidebar pure-u-1 pure-u-med-1-4">
+                    <div class="header">
+                        <hgroup>
+                        <h1 class="brand-title"><a href="/">sam ross</a></h1>
+                        </hgroup>
+                        <nav class="nav">
+                            <ul class="nav-list">
+                                <li><a href="https://github.com/flannelJesus">github</a></li>
+                                <li><a href="/cv">cv</a></li>
+                                <li><a href="/about">about</a></li>
+                                <li><a href="http://www.chris-granger.com">inspiration</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </nav>
+                <article class="content pure-u-1 pure-u-med-3-4">
