added next post and previous post links

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,12 @@ article h2 { font-size:32px;  margin-bottom:10px; margin-top:0px; font-weight:10
 article h4 { font-weight: 100; font-size: 18px; font-style: italic; margin-top: 10px;}
 article p {margin: 18px 0; font-size:16px; line-height:21px;}
 article a { text-decoration:underline; }
-article>p.view { text-align: center; margin-top: 30px }
-article blockquote { font-style: italic; border-left: 10px solid #444; padding-left:10px; margin: 15px 25px 15px 20px }
+p.view { text-align: center; margin-top: 30px }
+p.view a {text-decoration:none}
+p.view>a {font-size:18px; margin: 0px 10px 0px 10px}
+p.view em a:hover {text-decoration: underline}
+p.view a.inactive {pointer-events: none; cursor: default; color:#888;}
+article blockquote { font-style: italic; color:#ccc; border-left: 10px solid #444; padding-left:10px; margin: 15px 25px 15px 20px }
 
 article ul { margin-left:0px;}
 ul.post-list { list-style-type: none; line-height:20px}
