--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,21 @@
 
 {{ content }}
 
-<p class="view"><em><a href="/">view more</a></em></p>
-
+<p class="view">
+    {% if page.previous.url %}
+        <a class="prev" href="{{page.previous.url}}" title="{{page.previous.title}}">
+    {% else %}
+        <a class="inactive">
+    {% endif %}
+    &laquo;
+        </a>
+    <em> <a href="/">view more</a> </em>
+    {% if page.next.url %}  
+        <a class="next" href="{{page.next.url}}" title="{{page.next.title}}" >
+    {% else %}
+        <a class="inactive">
+    {% endif %}
+    &raquo;
+        </a>
+</p>
 {% include footer.html %}
