--- a/css/syntax.css
+++ b/css/syntax.css
@@ -24,6 +24,8 @@ code
     font-size:14px;
 }
 
+p>code {background-color:#333; padding:3px; border-radius:5px;background-image:url('/assets/pre_background.jpg'); margin:0px 2px; color:#E6DB74;}
+
 .highlight pre { background: transparent; color: #f8f8f2; padding:0px 10px 0px 0px}
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
