--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ ul.exp time { color:#C4C4C4; font-style: italic; margin-left: 20px;float:right}
 }
 
 @media (min-width: 70em) {
-    .content {
+    .content *:not(h2) {
         text-align: justify
     }
 }
