CV and css change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sam Ross Personal Website">
         <title>flannelJesus.github.io</title>
-        
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
             
             <link rel="stylesheet" href="/css/pure.css">
             <link rel="stylesheet" href="/css/main-grid.css">
@@ -26,6 +24,7 @@
                                 <li><a href="/cv">cv</a></li>
                                 <li><a href="/about">about</a></li>
                                 <li><a href="http://www.chris-granger.com">inspiration</a></li>
+                                <li><a href="http://practicaltypography.com">styling guidelines</a></li>
                             </ul>
                         </nav>
                     </div>
