--- a/css/pure.css
+++ b/css/pure.css
@@ -91,7 +91,7 @@ button,
 input,
 select,
 textarea {
-    font-family: "Roboto", sans-serif;
+    font-family: dn, sans-serif;
 }
 
 /**
@@ -576,7 +576,6 @@ table {
 
     * Helvetica, Arial, sans-serif: Common font stack on OS X and Windows.
     */
-    font-family: "Roboto", sans-serif;
 
     /*
     Use flexbox when possible to avoid `letter-spacing` side-effects.
@@ -617,7 +616,6 @@ Resets the font family back to the OS/browser's default sans-serif font,
 this the same font stack that Normalize.css sets for the `body`.
 */
 .pure-g [class *= "pure-u"] {
-    font-family: "Roboto", sans-serif;
 }
 
 .pure-u-1,
@@ -854,7 +852,6 @@ this the same font stack that Normalize.css sets for the `body`.
 
     * Helvetica, Arial, sans-serif: Common font stack on OS X and Windows.
     */
-    font-family: "Roboto", sans-serif;
 
     /*
     Use flexbox when possible to avoid `letter-spacing` side-effects.
@@ -885,7 +882,6 @@ Resets the font family back to the OS/browser's default sans-serif font,
 this the same font stack that Normalize.css sets for the `body`.
 */
 .pure-g-r [class *= "pure-u"] {
-    font-family: "Roboto", sans-serif;
 }
 
 .pure-g-r img {
