change typographic elements

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@
     {% endif %}
     &laquo;
         </a>
-    <em> <a href="/">view more</a> </em>
+    <a href="/">view more</a> 
     {% if page.next.url %}  
         <a class="next" href="{{page.next.url}}" title="{{page.next.title}}" >
     {% else %}
