--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ nav h1
 
 article>time {color:#C4C4C4;float:right;font-size:16px; margin:15px 0px 0px 20px}
 article h2 { font-size:32px;  margin-bottom:10px; margin-top:0px; font-weight:700}
+time, h2 {letter-spacing: -1px;word-spacing: 1px}
 article h4 { font-weight: 100; font-size: 18px; font-style: italic; margin-top: 10px;}
 article p {margin: 18px 0; font-size:18px; line-height:23px;}
 article a { text-decoration:underline; }
@@ -125,6 +126,7 @@ article a { text-decoration:underline; }
 
 p.view { text-align: center; margin-top: 30px }
 p.view a {text-decoration:none}
+p.view a:nth-child(2) {font-size:16px;}
 p.view>a {font-size:18px; margin: 0px 10px 0px 10px}
 p.view em a:hover {text-decoration: underline}
 p.view a.inactive {pointer-events: none; cursor: default; color:#888;}
