--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,5 @@
 ---
+layout: default
 ---
-
-{% include header.html %}
-
-{{ content }}
-
-{% include footer.html %}
+{% include JB/setup %}
+{% include themes/bootstrap-3/page.html %}
