--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,30 +1,5 @@
 ---
+layout: default
 ---
-
-{% include header.html %}
-
-<time>{{  page.date| date_to_string }}</time>
-<h2>{{ page.title }}</h2>
-<h4>{{page.subtitle}}</h4>
-
-{{ content }}
-
-<p class="view">
-    {% if page.previous.url %}
-        <a class="prev" href="{{page.previous.url}}" title="{{page.previous.title}}">
-    {% else %}
-        <a class="inactive">
-    {% endif %}
-    &laquo;
-        </a>
-    <a href="/">view more</a> 
-    {% if page.next.url %}  
-        <a class="next" href="{{page.next.url}}" title="{{page.next.title}}" >
-    {% else %}
-        <a class="inactive">
-    {% endif %}
-    &raquo;
-        </a>
-</p>
-
-{% include footer.html %}
+{% include JB/setup %}
+{% include themes/bootstrap-3/post.html %}
