--- a/assets/themes/bootstrap-3/bootstrap/css/bs-sticky-footer.css
+++ b/assets/themes/bootstrap-3/bootstrap/css/bs-sticky-footer.css
@@ -20,10 +20,12 @@ body {
 /* Set the fixed height of the footer here */
 #footer {
   height: 30px;
+  overflow: scroll;
   background-color: #f5f5f5;
 }
 
 #footer p {
-  line-height: 30px;
-  margin-bottom: 0px;
+  line-height: 20px;
+  margin: 4px 0px 0px;
+
 }
