--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -88,10 +88,7 @@
 
 <div id="footer">
     <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-            with help from <a href="http://jekyllbootstrap.com" target="_blank"
-                              title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+        <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
         </p>
     </div>
 </div id="footer">
