--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>{{ page.title }}</title>
     {% if page.description %}
-    <meta name="description" content="{{ page.description }}">
-    {% endif %}
+    <meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" href="{{ site.url }}/assets/favicon.png">
 
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,66 +41,62 @@
     -->
 
     <!-- atom & rss feed -->
-    <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate"
-          title="Sitewide ATOM Feed">
-    <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate"
-          title="Sitewide RSS Feed">
+    <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
 </head>
 
 <body>
-<div id="wrap">
-    <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+    <div id="wrap">
+        <nav class="navbar navbar-default" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    {% assign pages_list = site.pages %} {% assign group = 'navigation' %} {% include JB/pages_list %}
+                </ul>
+                <form action="http://www.google.com/search" class="navbar-form navbar-right" method="get">
+                    <div class="form-group">
+                        <input class="form-control" placeholder="Search" name="q" size="31" maxlength="255" value="" type="text">
+                    </div>
+                    <input value="Search" class="btn btn-default" type="submit">
+                    <input style="display:none" value="{{ site.production_url }}" name="sitesearch" checked="" type="radio">{% comment %}You must specify the variable 'production_url' in your _config.yml file{% endcomment %}
+                </form>
+
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+
+        <div class="container">
+            {{ content }}
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-            <ul class="nav navbar-nav">
-                {% assign pages_list = site.pages %}
-                {% assign group = 'navigation' %}
-                {% include JB/pages_list %}
-            </ul>
-            <form action="http://www.google.com/search" class="navbar-form navbar-right" method="get">
-                <div class="form-group">
-                    <input class="form-control" placeholder="Search" name="q" size="31" maxlength="255" value="" type="text">
-                </div>
-                <input value="Search" class="btn btn-default" type="submit">
-                <input style="display:none" value="{{ site.production_url }}" name="sitesearch" checked="" type="radio">
-                {% comment %}You must specify the variable 'production_url' in your _config.yml file{% endcomment %}
-            </form>
+    </div>
 
+    <div id="footer">
+        <div class="container">
+            <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
+            </p>
         </div>
-        <!-- /.navbar-collapse -->
-    </nav>
+    </div id="footer">
 
-    <div class="container">
-        {{ content }}
-    </div>
-
-</div>
-
-<div id="footer">
-    <div class="container">
-        <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
-        </p>
-    </div>
-</div id="footer">
-
-{% include JB/analytics %}
+    {% include JB/analytics %}
 
 
-<!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
