--- a/_includes/themes/bootstrap-3/practice.html
+++ b/_includes/themes/bootstrap-3/practice.html
@@ -13,6 +13,10 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon"
+      type="image/png"
+      href="{{ site.url }}/assets/favicon.png">
+
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
