--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -32,7 +32,7 @@
 
     <!-- Fav and touch icons -->
     <!-- Update these with your own images -->
-      <link rel="shortcut icon" href="assets/favicon.png">
+      <link rel="shortcut icon" href="{{ ASSET_PATH }}/favicon.png">
       <!-- <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
       <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
       <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
