--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -15,11 +15,16 @@
 
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Optional theme -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- Optional theme --><!-- 
+    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"> -->
     <!-- Sticky Footer -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
-
+    <!-- highlighting css -->
+    {% if page.highlighter_style %}
+        <link href="/assets/syntaxcss/{{ page.highlighter_style }}.css" rel="stylesheet" type="text/css" media="all">
+    {% elsif site.highlighter_style %}
+        <link href="/assets/syntaxcss/{{ site.highlighter_style }}.css" rel="stylesheet" type="text/css" media="all">
+    {% endif %}
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
