took out bootstrap markup on images for future-proofing (no non-template files should have bootstrap classes, they should all be standard markup or html)

--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -28,7 +28,16 @@ h1, h2, h3, h4 {
 
 /* img styling */
 .content img {
+vertical-align: middle;
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+display: block;
+border: solid 1px #aaa;
+padding: 2px;
+max-width: 100%;
 }
+
 
 /* posts index */
 .post > h3.title {
