some modifications to syntax highlighting

--- a/assets/syntaxcss/monokai.css
+++ b/assets/syntaxcss/monokai.css
@@ -1,4 +1,4 @@
-.highlight pre { background-color: #49483e }
+.highlight pre {background: #49483e url('monokaibg.jpg') top left; color:white;}
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
@@ -57,7 +57,6 @@
 .highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
 .highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
 .highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
-
 .highlight .gh { } /* Generic Heading & Diff Header */
 .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
 .highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
