--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -119,7 +119,7 @@ pre code {
 
 .highlighttable .linenos pre {
   color: #4a4a40;
-  background-color: #e7e7e1;
+  background: #e7e7e1;
   border-radius: 10px 0px 0px 10px;
 }
 
