--- a/assets/syntaxcss/monokai.css
+++ b/assets/syntaxcss/monokai.css
@@ -11,6 +11,7 @@
 .highlight .c1 { color: #75715e } /* Comment.Single */
 .highlight .cs { color: #75715e } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gp { color: #dd9e2d;}
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .kc { color: #66d9ef } /* Keyword.Constant */
 .highlight .kd { color: #66d9ef } /* Keyword.Declaration */
