--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -112,6 +112,21 @@ pre code {
   white-space: pre;
 }
 
+p > code {
+  display: inline-block;
+  background: #f8f8f8;
+  line-height: 1.42em;
+  color: #c7254e;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
+  -ms-border-radius: 0.4em;
+  -o-border-radius: 0.4em;
+  border-radius: 3px;
+  padding: 0 3px;
+  margin: 0px 1px 0px 1px;
+}
+
 .highlighttable pre {
   margin:0px;
   border: none;
@@ -125,4 +140,17 @@ pre code {
 
 .highlighttable .code pre {
   border-radius: 0px 10px 10px 0px;
+}
+
+aside {
+  color: #666;
+  font-style:italic;
+  min-height: 20px;
+  padding: 9px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
