change footer to proper Bootstrap class

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -86,12 +86,12 @@
 
     </div>
 
-    <div id="footer">
+    <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
             </p>
         </div>
-    </div id="footer">
+    </nav>
 
     {% include JB/analytics %}
 
