--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -18,8 +18,14 @@ h1, h2, h3, h4 {
   color: #f22430;
 }
 
-#footer {
+.navbar-fixed-bottom {
   background-color: #fdcd60;
+  min-height:30px;
+  height:30px;
+}
+
+.navbar-fixed-bottom p {
+  margin-top:4px;
 }
 
 .container {
