--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -25,8 +25,14 @@
     {% elsif site.highlighter_style %}
         <link href="/assets/syntaxcss/{{ site.highlighter_style }}.css" rel="stylesheet" type="text/css" media="all">
     {% endif %}
+
+    
     <!-- Custom styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+
+    {% if page.css %}
+        <link rel="stylesheet" href="/assets/css/{{ page.css }}.css" type="text/css" media="all">
+    {% endif %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -100,6 +106,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
+    {% if page.javascript %}
+        <script src="/assets/js/{{ page.javascript }}.js"></script>
+    {% endif %}
 </body>
 
 </html>
