--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -32,11 +32,13 @@
         {{ content }}
     </div>
 
-</div>
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class="footer">
     <div class="container">
         <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
         </p>
     </div>
 </nav>
+
+</div>
+
+
