--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -165,3 +165,24 @@ aside {
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
+
+#wrap {
+  display:flex;
+  flex-direction:column;
+  margin: 0;
+  padding:0;
+}
+
+#wrap > .container {
+  flex-grow:1;
+}
+
+#wrap > nav.footer > div > p {
+  margin: 5px 0;
+}
+
+#wrap > nav.footer {
+  background-color: #fdcd60;
+  border: solid #BB902E;
+  border-width: 1px 0 0;
+}
